--- a/front-end/src/pages/Homepage.css
+++ b/front-end/src/pages/Homepage.css
@@ -1,6 +1,26 @@
 main {
-  position: relative;
   margin-left: 150px;
+  display: flex;
+  flex-direction: column;
+  flex-wrap: wrap;
+}
+
+h1 {
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 48px;
+}
+
+p {
+  font-family: "Roboto", sans-serif;
+  font-weight: 400;
+  font-style: normal;
+  font-size: 18px;
+}
+
+.nameRed {
+  color: #ff0000;
 }
 
 .UserActivity {
@@ -8,6 +28,7 @@ main {
   display: flex;
   justify-content: center;
   align-items: center;
+  /*width: 72%;*/
   width: 835px;
   height: 320px;
   border-radius: 10px;
@@ -17,6 +38,7 @@ main {
 .UserPerformance {
   width: 258px;
   height: 263px;
+  display: flex;
   justify-content: center;
   align-items: center;
   color: white;
@@ -25,34 +47,71 @@ main {
 }
 
 .userAverage {
-  display: flex;
-  justify-content: center;
-  align-items: center;
   width: 258px;
   height: 263px;
+  display: flex;
+  position: relative;
+  justify-content: center;
+  align-items: center;
   background-color: #ff0000;
   border-radius: 10px;
+}
+
+.UserAverage_text {
+  width: 148px;
+  
+  position: absolute;
+  z-index: 2;
+  color: #FFFFFF;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 24px;
+  opacity: 50%;
+  top: 620px;
+  left: 184px;
 }
 
 .userScore {
+  width: 258px;
+  height: 263px;
   display: flex;
   justify-content: center;
   align-items: center;
-  width: 258px;
-  height: 263px;
-  background-color: #ff0000;
+  background-color: #fbfbfb;
   border-radius: 10px;
 }
 
-.counters {
-  float: right;
-  position: absolute;
-  right: 0px;
+@media (min-width: 1271px) {
+  .counters {
+    width: 258px;
+    float: right;
+    position: absolute;
+    left: 1000px;
+    top: 270px;
+  }
+}
+
+@media (max-width: 1270px) {
+  .counters {
+    width: 839px;
+    display: flex;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-top: 30px;
+    justify-content: space-between;
+    
+  }
+
 }
 
 .graphs_bottom {
+  width: 835px;
+  height: 258px;
   float: left;
   display: flex;
+  justify-content: space-between;
   flex-direction: row;
   gap: 20px;
   margin-top: 20px;
