--- a/front-end/src/component/Score.css
+++ b/front-end/src/component/Score.css
@@ -1,4 +1,15 @@
 .score_container {
-    background-color: #FBFBFB;
-    border-radius: 15px;
+  background-color: #fbfbfb;
+  border-radius: 15px;
+}
+
+.score-title {
+  position: absolute;
+  font-family: "Roboto", sans-serif;
+  font-weight: 500;
+  font-style: normal;
+  font-size: 15px;
+  line-height: 24px;
+  top: 620px;
+  left: 750px;
 }
