--- a/front-end/src/pages/Homepage.css
+++ b/front-end/src/pages/Homepage.css
@@ -3,20 +3,30 @@ main {
   display: flex;
   flex-direction: column;
   flex-wrap: wrap;
+  max-width: 1126px;
 }
 
-h1 {
+main h1 {
   font-family: "Roboto", sans-serif;
   font-weight: 500;
   font-style: normal;
   font-size: 48px;
 }
 
-p {
+.homepage-title {
+  margin-bottom: 0;
+}
+
+.homepage-text {
+  margin-bottom: 50px;
+}
+
+main p {
   font-family: "Roboto", sans-serif;
   font-weight: 400;
   font-style: normal;
   font-size: 18px;
+  /* margin-bottom: 0; */
 }
 
 .nameRed {
